near-sdk/compilation_tests/error_handling_incorrect_result.stderr
error[E0277]: the trait bound `u64: ContractErrorTrait` is not satisfied
  --> compilation_tests/error_handling_incorrect_result.rs:21:1
   |
21 | #[near]
   | ^^^^^^^ the trait `ContractErrorTrait` is not implemented for `u64`
   |
   = help: the following other types implement trait `ContractErrorTrait`:
             ActionInJointPromise<'a>
             BaseError
             BorshDeserializeError<'a>
             BorshSerializeError<'a>
             CallbackComputationUnsuccessful
             CallbackJointPromise<'a>
             CallbackYieldPromise<'a>
             ContractAlreadyInitialized
           and $N others
note: required by a bound in `check_contract_error_trait`
  --> src/utils/contract_error.rs
   |
   | pub fn check_contract_error_trait<T: ContractErrorTrait>(_: &T) {}
   |                                      ^^^^^^^^^^^^^^^^^^ required by this bound in `check_contract_error_trait`
   = note: this error originates in the attribute macro `::near_sdk::near_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)
